--- a/service_playbook.yml
+++ b/service_playbook.yml
@@ -1,6 +1,35 @@
 ---
 - name: Service playbook
   hosts: aws_ec2
+  remote_user: ubuntu
   tasks:
-     - name: Healthcheck
-       command: "ls -a"
+    -
+    - name: Update repositories cache and install golang 1.16 version #todo нужно скачивать с сайта и распаковывать
+      apt:
+        name: golang=1.16.13
+        update_cache: yes
+        upgrade: yes
+      become: yes
+
+    - name: Clone a repository
+      git:
+        repo: "https://github.com/bhavenger/skillbox-diploma.git"
+        dest: "/usr/local/skillbox-diploma"
+        clone: yes
+        update: yes
+      become: yes
+
+    - name: Install dependencies and start tests
+      ansible.builtin.command: go mod download && go test -v ./...
+      become: yes
+      args:
+        chdir: "/usr/local/skillbox-diploma"
+
+    - name: Build
+      ansible.builtin.command: GO111MODULE=on go build -o app cmd/server/app.go
+      become: yes
+
+    - name: Start server
+      ansible.builtin.command: ./app
+      become: yes
+
