--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -2,7 +2,7 @@
 plugin: aws_ec2
 aws_profile: default
 regions:
-  - eu-central-1
+  - eu-west-1
 filters:
   instance-state-name : running
 compose:
