Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
 
 install_dependencies:
   image: ansible/ansible-runner:latest
-  stage: build
+  stage: deploy
   script:
     - pwd
     - ls
