dynamic invertory filter service instances

--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -6,5 +6,6 @@ regions:
   - eu-west-1
 filters:
   instance-state-name : running
+  tag:Name: Service instance
 compose:
   ansible_host: public_ip_address
