--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,9 @@
 stages:
   - deploy
 
-# variables:
-#  docker_html_path: "/www"
-#  env: prod
-
-
-install_dependencies:
+deploy_service_to_instances:
   image: ansible/ansible-runner:latest
   stage: deploy
+  when: manual
   script:
-    - pwd
-    - ls
+    - ansible-playbook unit_service_with_docker_playbook_with_role.yml -vvv
