--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
 deploy_service_to_instances:
   image: ansible/ansible-runner:latest
   stage: deploy
-  when: manual
+  #when: manual
   script:
+    - ansible-inventory --graph -i aws_ec2.yaml
     - ansible-playbook unit_service_with_docker_playbook_with_role.yml -vvv
