--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,9 @@ stages:
   - deploy
 
 deploy_service_to_instances:
-  image: ansible/ansible-runner:latest
+  image: cytopia/ansible:latest-aws
   stage: deploy
   #when: manual
   script:
-    - apt install python3-pip
-    - pip install boto3
     - ansible-inventory --graph -i aws_ec2.yaml
     - ansible-playbook unit_service_with_docker_playbook_with_role.yml -vvv
