--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ deploy_service_to_instances:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
     - echo $SSH_PRIVATE_KEY > ~/.ssh/id_rsa
+    - cat ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     #when: manual
   script:
