--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,10 @@ deploy_service_to_instances:
   before_script:
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - echo $SSH_PRIVATE_KEY > ~/.ssh/id_rsa
-    - cat ~/.ssh/id_rsa
+    - eval $(ssh-agent -s)
+    - whereis tr
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+    #- echo $SSH_PRIVATE_KEY > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     #when: manual
   script:
