--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ deploy_service_to_instances:
     #- whereis tr
     #- echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     #- echo $SSH_PRIVATE_KEY > ~/.ssh/id_rsa
-    - chmod 600 ~/.ssh/id_rsa
+    #- chmod 600 ~/.ssh/id_rsa
     #when: manual
   script:
     - mkdir ~/.aws
