--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,4 @@ deploy_service_to_instances:
     - pwd
     - ls
     - ansible-inventory --graph -i aws_ec2.yaml
-    - ansible-playbook unit_service_with_docker_playbook_with_role.yml -vvv
+    - ./roles/ansible-playbook unit_service_with_docker_playbook_with_role.yml -vvv
