--- a/playbooks/unit_service_with_docker_playbook_with_role.yml
+++ b/playbooks/unit_service_with_docker_playbook_with_role.yml
@@ -1,12 +1,7 @@
 ---
 - name: Service playbook
   hosts: aws_ec2
-  remote_user: ubuntu
-  become: yes
-  vars:
-    docker_compose_version: "1.27.4"
-  tasks:
-
+  pre_tasks:
     - name: Update apt cache
       apt: update_cache=yes cache_valid_time=3600
 
@@ -26,45 +21,17 @@
           - software-properties-common
           - gnupg-agent
 
-    - name: Add an apt signing key for Docker
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: Add apt repository for stable version
-      apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable
-        state: present
-
-    - name: Install Docker
-      apt:
-        name: "{{ packages }}"
-        state: present
-        update_cache: yes
-      vars:
-        packages:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
+  roles:
+    - oabo/installdocker/roles/installdocker
+    - installdockercompose
+  remote_user: ubuntu
+  become: yes
+  post_tasks:
 
     - name: Add user to docker group
       user:
         name: "{{ansible_user}}"
         group: docker
-
-    - name: Download docker-compose {{ docker_compose_version }}
-      get_url:
-        url: https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-Linux-x86_64
-        dest: ~/docker-compose
-        mode: '+x'
-
-    - name: Check docker-compose exists
-      stat: path=~/docker-compose
-      register: docker_compose
-
-    - name: Move docker-compose to /usr/local/bin/docker-compose
-      command: mv ~/docker-compose /usr/local/bin/docker-compose
-      when: docker_compose.stat.exists
 
     - name: Clone a repository
       git:
@@ -83,10 +50,9 @@
       args:
         chdir: "/usr/local/skillbox-diploma"
 
-
     - name: Copy unit to host
       copy:
-        src: ./instahelper.service
+        src: ../instahelper.service
         dest: /etc/systemd/system/instahelper.service
         owner: ubuntu
         group: ubuntu
